service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
  namespace: default
spec:
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
